Added optimistic locking and REST endpoints

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,5 +7,7 @@
     <h:link outcome="jpa/movies" value="JPA implementation"/>
     <br/>
     <h:link outcome="myBatis/movies" value="MyBatis implementation"/>
+    <br/>
+    <h:link outcome="jpa/updateTitle" value="Optimistic lock testing"/>
 </h:body>
 </html>
